added basic text and nav links for website. not styled

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,9 +7,9 @@
   </head>
 
   <body>
-    {% include nav.html %}
-    {% include header.html %}
+    {% include 'nav.html' %}
+    {% include 'header.html' %}
     {% block content %} {% endblock %}
-    {% include footer.html %}
+    {% include 'footer.html' %}
   </body>
 </html>
