--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,13 @@
 {% extends 'layout.html' %}
 {% block content %}
 
+<div class="POWHome">
+  <img src="/static/images/POW-header.jpg" alt="Kiwi POWs at Campo 57">
+</div>
+<div class="AboutPage">
+</div>
+<div class="Photo">
+</div>
+<div class="KeyInfo">
+</div>
 {% endblock %}
