--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,29 +3,72 @@ html {
 }
 
 header {
-  position: fixed;
-  top: 0;
-  width: 100%;
   color: #726D52;
   text-align: center;
+  font-family: 'Playfair Display', serif;
 }
 
 nav {
   padding-top: 15px;
 }
 
+/** Home Page CSS **/
 .POWHome {
-  width: 80%;
-  padding-left: 10%;
-  padding-bottom: 20px;
+  width: 70%;
+  padding-left: 15%;
+  padding-bottom: 50px;
 }
 
 .POWHome img {
   width: 100%;
 }
+
+.AboutSnip {
+  padding-top: 30px;
+  width: 60%;
+  padding-left: 20%;
+  padding-bottom: 30px;
+}
+
+.photo {
+  width: 70%;
+  padding-left: 15%;
+  padding-bottom: 50px;
+}
+
+.photo img {
+  width: 100%;
+}
+
+.row {
+  width: 100%;
+  display: inline;
+}
+
+.coloum {
+  width: 33%;
+}
+
 h1 {
   color: inherit;
+  font-size: 50px;
 }
+
+h2 {
+   width: 100%;
+   text-align: center;
+   border-bottom: 1px solid #000;
+   line-height: 0.1em;
+   margin: 10px 0 20px;
+   font-size: 40px;
+}
+
+h2 span {
+    background:#fff;
+    padding:0 10px;
+    background-color: #F7F7F7;
+}
+
 
 ul {
   list-style-type: none;
@@ -41,4 +84,13 @@ li {
 a {
   text-decoration: none;
   color: inherit;
+  font-size: 20px;
+}
+
+li a:hover {
+  color: #D9B68C;
+}
+
+p {
+  font-family: 'Raleway', sans-serif;
 }
