--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
   <head>
     <title>Kiwi P.O.W.s</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway&display=swap" rel="stylesheet">
   </head>
 
   <body>
