created key info segement of home page.

--- a/templates/home.html
+++ b/templates/home.html
@@ -33,14 +33,20 @@
 <div class="row">
   <div class="coloum">
     <h3>Capture</h3>
+    <p>Each POW has their date of capture within their profile.
+      This can help to find out at which battle a soldier was captured at.</p>
   </div>
 
   <div class="coloum">
     <h3>Rank</h3>
+    <p>The miltary, navy and airforce have a series of different ranks that a person can have.
+    Finding a person's rank can help give an idea of their role within a unit during the war.</p>
   </div>
 
   <div class="coloum">
     <h3>Unit</h3>
+    <p>Every unit had a unique experience during the Second World War. A soldier's experience is often
+    greatly influnced by the unit and the other men within it.</p>
   </div>
 </div>
 
