--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Kiwi P.O.W.s</title>
+    <title>New Zealand Prisoner of War Records</title>
     <link rel="stylesheet" href="/static/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway&display=swap" rel="stylesheet">
   </head>
