--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,6 +2,6 @@
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/about">About</a></li>
-    <li><a href="/search">Search</a></li>
+    <li><a href="/records">Search</a></li>
   </ul>
 </nav>
