browse by letter created with functional links

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,6 +55,12 @@ nav {
   padding-left: 15%;
 }
 
+.alphabet {
+  color: #D9B68C;
+  padding-top: 15px;
+  font-size: 35px;
+}
+
 h1 {
   color: inherit;
   font-size: 50px;
