--- a/templates/records.html
+++ b/templates/records.html
@@ -2,5 +2,5 @@
 {% block content %}
 <h2><span>Search For Soldier</span></h2>
 
-<h3><a href="/Browse">Browse Records</a></h3>
+<h3><a href="/browse">Select To Browse Records</a></h3>
 {% endblock %}
