popluated prisonerunit (many to many table)

--- a/templates/results.html
+++ b/templates/results.html
@@ -3,4 +3,7 @@
 
 <h2><span>Showing results for {{val[0]}}</span></h2>
 
+{% for pow in prisoners %}
+<p>{{pow[3]}}</p>
+{% endfor %}
 {% endblock %}
