--- a/templates/results.html
+++ b/templates/results.html
@@ -4,6 +4,6 @@
 <h2><span>Showing results for {{val[0]}}</span></h2>
 
 {% for pow in prisoners %}
-<p>{{pow[3]}}</p>
+<p>{{ pow.surname }}</p>
 {% endfor %}
 {% endblock %}
