displaying prisoner name and rank on their induvidual page

--- a/templates/prisoner.html
+++ b/templates/prisoner.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h2><span>prisoner.rank. prisoner.surname</span></h2>
+<h2><span>{{ rank.name }}. {{ prisoner.surname }}</span></h2>
 <div class="powphoto">
 </div>
 <div class="powtext">
