--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,14 @@ nav {
   font-size: 35px;
 }
 
+.powphoto {
+  width: 25%;
+}
+
+.powtext {
+  width: 75%;
+}
+
 h1 {
   color: inherit;
   font-size: 50px;
@@ -81,6 +89,11 @@ h2 span {
     background-color: #F7F7F7;
 }
 
+table td{
+  border: 1px solid black;
+  border-collapse: collapse;
+  text-align: left;
+}
 
 ul {
   list-style-type: none;
