--- a/templates/prisoner.html
+++ b/templates/prisoner.html
@@ -1,9 +1,22 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h2><span>{{ rank.name }}. {{ prisoner.surname }}</span></h2>
-<div class="powphoto">
-</div>
-<div class="powtext">
-  <p>random testing lol cause it be like that sometimes</p>
+<h2><span>{{ rank.initial }}. {{ prisoner.surname }}</span></h2>
+<div class="row">
+  <div class="powphoto">
+    <table>
+      <tr>
+        <td><a href="/rank/{{rank.idl}}">Rank: {{rank.name}}</a></td>
+      </tr>
+      <tr>
+        <td><a href="/unit/{{unit}}">Unit: {{unit}}</a></td>
+      </tr>
+      <tr>
+        <td><a href="/capture/{{capture.id}}">Capture: {{capture.date}}</a></td>
+      </tr>
+    </table>
+  </div>
+  <div class="powtext">
+    <p>{{rank.name}} {{prisoner.initial}}. {{prisoner.surname}} was captured {{inor}} {{capture.date}}</p>
+  </div>
 </div>
 {% endblock %}
