--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,26 @@
 {% extends 'layout.html' %}
 {% block content %}
+<h2><span>About.</span></h2>
+<div class="AboutSnip">
+  <p> Throughout the second World War over 8000 New Zealand soldiers were captured and taken as
+    Prisoners of War, one in 200 of people of the New Zealand population at the time. This database holds
+    {{number}} records of New Zealanders who were taken prisoner by the axis powers.
+    <br><br>
+    New Zealand fought the Second World War from all over the globe, with involvement in defending the pacific,
+    in the defeat of the allied forces at the Battle of Crete and in the North African theatre as well.
+    As a result New Zealand had the highest ratio of killed per million people in the Commonwealth at 6684
+    compared to Britain's 5123 and Australia's 3232. It was due to being involved in many intense battles
+    which caused the vast number of fatalities that most men who became prisoners were captured. The battles
+    in the North Africian Theatre caused over 4000 men to be captured and 10000 to be killed, while this
+    costly campaign was successful despite the vast loss, other battles were not. The Battle of Crete was
+    unsuccessful for the allied forces and here over 2000 men were captured and 671 men died.
+    <br><br>
+    Overall in New Zealand we don't often recognize the experience of most men who were Prisoners of War,
+    outside of those who earned high class medals such as Charles Upham getting a Victoria's Cross. While
+    recognizing these men, we should not forget those who were not the Captains and Lieutenants and equally
+    lived through the awful experience of being taken as prisoner.
+    </p>
+</div>
+
 
 {% endblock %}
