--- a/templates/home.html
+++ b/templates/home.html
@@ -8,20 +8,19 @@
 <h2><span>About</span></h2>
 
 <div class="AboutSnip">
-  <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-    velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-    sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-  <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta
-    sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-    dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora
-    incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-    exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem
-    vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
-    qui dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+  <p>Throughout the second World War over 8000 New Zealand soldiers were captured and taken as
+    Prisoners of War, one in 200 of people of the New Zealand population at the time. This database holds
+    {{number}} records of New Zealanders who were taken prisoner by the axis powers.</p>
+  <p>New Zealand fought the Second World War from all over the globe, with involvement in defending the pacific,
+  in the defeat of the allied forces at the Battle of Crete and in the North African theatre as well.
+  As a result New Zealand had the highest ratio of killed per million people in the Commonwealth at 6684
+  compared to Britain's 5123 and Australia's 3232. It was due to being involved in many intense battles
+  which caused the vast number of fatalities that most men who became prisoners were captured. The battles
+  in the North Africian Theatre caused over 4000 men to be captured and 10000 to be killed, while this
+  costly campaign was successful despite the vast loss, other battles were not. The Battle of Crete was
+  unsuccessful for the allied forces and here over 2000 men were captured and 671 men died.</p>
+
+  <h4><a href="/about">Read More Here</a></h4>
 </div>
 
 <div class="photo">
@@ -35,18 +34,21 @@
     <h3>Capture</h3>
     <p>Each POW has their date of capture within their profile.
       This can help to find out at which battle a soldier was captured at.</p>
+      <h4><a href="/capture">Read More Here</a></h4>
   </div>
 
   <div class="coloum">
     <h3>Rank</h3>
     <p>The miltary, navy and airforce have a series of different ranks that a person can have.
     Finding a person's rank can help give an idea of their role within a unit during the war.</p>
+    <h4><a href="/rank">Read More Here</a></h4>
   </div>
 
   <div class="coloum">
     <h3>Unit</h3>
     <p>Every unit had a unique experience during the Second World War. A soldier's experience is often
     greatly influnced by the unit and the other men within it.</p>
+    <h4><a href="/unit">Read More Here</a></h4>
   </div>
 </div>
 
