--- a/templates/about.html
+++ b/templates/about.html
@@ -6,6 +6,7 @@
     Prisoners of War, one in 200 of people of the New Zealand population at the time. This database holds
     {{number}} records of New Zealanders who were taken prisoner by the axis powers.
     <br><br>
+
     New Zealand fought the Second World War from all over the globe, with involvement in defending the pacific,
     in the defeat of the allied forces at the Battle of Crete and in the North African theatre as well.
     As a result New Zealand had the highest ratio of killed per million people in the Commonwealth at 6684
@@ -19,6 +20,25 @@
     outside of those who earned high class medals such as Charles Upham getting a Victoria's Cross. While
     recognizing these men, we should not forget those who were not the Captains and Lieutenants and equally
     lived through the awful experience of being taken as prisoner.
+    <br><br>
+    This website is dedicated to my Great Uncle Patrick Monaghan. He was a private in the 25th New Zealand
+    battalion and my own research into his experience as a prisoner of war was the inspiration for this
+    website. He was captured on the 22nd of July 1942 in North Africa during the Second Battle of Ruweisat
+    Bridge during the First Battle of El Alamein. He was kept at Benghazi before being transported to Italy
+    in accordance with the Geneva Convention of 1929 rule. He was unfortunately traveling on the Nino Bixio,
+    which was torpedoed by a British Submarine. This caused the deaths of 118 New Zealand soldiers, and
+    Private Monaghan survived but sustained injuries to his leg and hip. He was taken to a Greek Hospital
+    before being transported to Campo 57 - Grupignano. He remained here till Italy's capitulation in September
+    of 1943, he remained at the camp and so was taken by the German's and transported to a German Prisoner of War
+    camp. ** CAMP MOVING **. As the German's were losing ground in early 1945, the decision was made to march the
+    Prisoners away from the Soviets who were invading from the East. From Stalag VIII-B, the prisoners marched
+     across Germany in the winter to **LOCATION** where they were liberated by the Americans on the
+    **DATE**.
+    <br><br>
+    His experience was not unique to him, countless other men experienced the cruel treatment of being a
+    prisoner of war. This website aims to help aid people in searching for family who had served and
+    hopefully gives them a better idea of what they went through during the Second World War as this is
+    not a topic widely discussed in New Zealand.
     </p>
 </div>
 
