--- a/templates/about.html
+++ b/templates/about.html
@@ -26,6 +26,8 @@
       lived through the awful experience of being taken as prisoner.
     </p>
   </div>
+</div>
+<div class="row">
   <div class="abouttext">
     <p>
     This website is dedicated to my Great Uncle Patrick Monaghan. He was a private in the 25th New Zealand
