restyling the results page, instead of displaying in a table, it's a list of paragraph links

--- a/templates/results.html
+++ b/templates/results.html
@@ -5,32 +5,21 @@
 
 <div class="row">
   <div class="coloum">
-    <table>
       {% for pow in results1 %}
-      <tr>
-        <td><a href="/pow/{{ pow.id }}">{{pow.service_number}} - {{pow.initial}}. {{pow.surname}}</a></td>
-      </tr>
+        <p><a href="/pow/{{ pow.id }}">{{pow.service_number}} - {{pow.initial}}. {{pow.surname}}</a></p>
       {% endfor %}
-    </table>
   </div>
   <div class="coloum">
-    <table>
       {% for pow in results2 %}
-      <tr>
-        <td><a href="/pow/{{ pow.id }}">{{pow.service_number}} - {{pow.initial}}. {{pow.surname}}</a></td>
-      </tr>
+        <p><a href="/pow/{{ pow.id }}">{{pow.service_number}} - {{pow.initial}}. {{pow.surname}}</a></p>
       {% endfor %}
-    </table>
   </div>
   <div class="coloum">
-    <table>
       {% for pow in results3 %}
-      <tr>
-        <td><a href="/pow/{{ pow.id }}">{{pow.service_number}} - {{pow.initial}}. {{pow.surname}}</a></td>
-      </tr>
+        <p><a href="/pow/{{ pow.id }}">{{pow.service_number}} - {{pow.initial}}. {{pow.surname}}</a></p>
       {% endfor %}
-    </table>
   </div>
+  <h3>{{results}}</h3>
 </div>
 
 
