--- a/templates/results.html
+++ b/templates/results.html
@@ -6,17 +6,17 @@
 <div class="row">
   <div class="coloum">
       {% for pow in results1 %}
-        <p><a href="/pow/{{ pow.id }}">{{pow.service_number}} - {{pow.initial}}. {{pow.surname}}</a></p>
+        <p><a href="/pow/{{pow.id}}">{{pow.service_number}} - {{pow.Rank.initial}} {{pow.initial}}. {{pow.surname}}</a></p>
       {% endfor %}
   </div>
   <div class="coloum">
       {% for pow in results2 %}
-        <p><a href="/pow/{{ pow.id }}">{{pow.service_number}} - {{pow.initial}}. {{pow.surname}}</a></p>
+        <p><a href="/pow/{{pow.id}}">{{pow.service_number}} - {{pow.Rank.initial}}  {{pow.initial}}. {{pow.surname}}</a></p>
       {% endfor %}
   </div>
   <div class="coloum">
       {% for pow in results3 %}
-        <p><a href="/pow/{{ pow.id }}">{{pow.service_number}} - {{pow.initial}}. {{pow.surname}}</a></p>
+        <p><a href="/pow/{{pow.id}}">{{pow.service_number}} - {{pow.Rank.initial}} {{pow.initial}}. {{pow.surname}}</a></p>
       {% endfor %}
   </div>
   <h3>{{results}}</h3>
