--- a/templates/prisoner.html
+++ b/templates/prisoner.html
@@ -5,6 +5,9 @@
   <div class="powphoto">
     <table
     <tr>
+      <td><img src="#" alt="{{prisoner.Rank.name}} {{prisoner.initial}}. {{prisoner.surname}} - Photo"></td>
+    </tr>
+    <tr>
       <td>Service Number: {{prisoner.service_number}}</td>
     </tr>
       <tr>
@@ -20,10 +23,13 @@
   </div>
   <div class="powtext">
     <p>{{prisoner.Rank.name}} {{prisoner.initial}}. {{prisoner.surname}} was captured {{inor}}
-      {{prisoner.Capture.date}}. {{prisoner.surname}} servied in the {% for u in prisoner.units %} {{u.unit.name}} {% endfor %}  of the 2NZEF, and was taken as a prisoner along with {{count}} other men {{sent}}.<br></p>
+      {{prisoner.Capture.date}}. {{prisoner.surname}} served in the {% for u in prisoner.units %} {{u.unit.name}} {% endfor %}  of the 2NZEF, and was taken as a prisoner along with {{count}} other men {{sent}}.<br></p>
   </div>
   <h3>Rank.</h3>
+  {{prisoner.Rank.name}}
   <h3>Unit.</h3>
+  {% for u in prisoner.units %} {{u.unit.name}} {% endfor %}
   <h3>Capture.</h3>
+  {{prisoner.Capture.date}}
 </div>
 {% endblock %}
