rewrote the prisoner information template, with styling.

--- a/templates/prisoner.html
+++ b/templates/prisoner.html
@@ -11,25 +11,32 @@
       <td>Service Number: {{prisoner.service_number}}</td>
     </tr>
       <tr>
-        <td><a href="/rank/{{prisoner.Rank.id}}">Rank: {{prisoner.Rank.name}}</a></td>
+        <td><a href="/ranks">Rank: {{prisoner.Rank.name}}</a></td>
       </tr>
       <tr>
-        <td><a href="/unit">Unit: {% for u in prisoner.units %} {{u.unit.name}} {% endfor %}</a></td>
+        <td><a href="/unit/{% for u in prisoner.units %}{{u.unit.id}}{% endfor %}">Unit: {% for u in prisoner.units %} {{u.unit.name}} {% endfor %}</a></td>
       </tr>
       <tr>
-        <td><a href="/capture/{{prisoner.Capture.id}}">Capture: {{prisoner.Capture.date}}</a></td>
+        <td><a href="/capture">Capture: {{prisoner.Capture.date}}</a></td>
       </tr>
     </table>
   </div>
   <div class="powtext">
-    <p>{{prisoner.Rank.name}} {{prisoner.initial}}. {{prisoner.surname}} was captured {{inor}}
-      {{prisoner.Capture.date}}. {{prisoner.surname}} served in the {% for u in prisoner.units %} {{u.unit.name}} {% endfor %}  of the 2NZEF, and was taken as a prisoner along with {{count}} other men {{sent}}.<br></p>
+    <p>{{prisoner.Rank.name}} {{prisoner.initial}}. {{prisoner.surname}} served in the
+      {% for u in prisoner.units %} {{u.unit.name}} {% endfor %} of the Second New Zealand
+      Expeditionary Force (2NZEF). Unfortunately {{inor}} {{prisoner.Capture.date}} he was
+      captured along with {{count}} other soldiers {{sent}}.<br></p>
   </div>
   <h3>Rank.</h3>
-  {{prisoner.Rank.name}}
+  <p>{{prisoner.Rank.name}}</p>
+  <p>{{prisoner.Rank.desc}}</p>
   <h3>Unit.</h3>
-  {% for u in prisoner.units %} {{u.unit.name}} {% endfor %}
+  {% for u in prisoner.units %}
+  <p>{{u.unit.name}}</p>
+  <p>{{u.unit.desc}}</p>
+  {% endfor %}
   <h3>Capture.</h3>
-  {{prisoner.Capture.date}}
+  <p>{{prisoner.Capture.date}}</p>
+  <p>{{prisoner.Capture.desc}}</p>
 </div>
 {% endblock %}
