--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,7 +3,17 @@
     <li><a href="/">Home</a></li>
     <li><a href="/about">About</a></li>
     <li><a href="/browse">Search</a></li>
+    <li><a href="/login">Login</a></li>
   </ul>
+  <!-- {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %} !-->
   <div class="searchWrapper">
      <form method="POST" action={{ url_for('search') }}>
          {{ searchform.csrf_token }}
