--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-<h2><span>Sign In</span></h2>
-
+<h2><span>Log In</span></h2>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
