styling the welcome login/register header links between login & register

--- a/templates/register.html
+++ b/templates/register.html
@@ -33,4 +33,5 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+    <p><a href="/login">Already have an account? Click here to login!</a></p>
 {% endblock %}
