--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,17 +1,16 @@
-<h4>Welcome {{current_user.username}}</h4>
 <nav>
+  <h4>Welcome {{current_user.username}} {% if current_user.is_anonymous %}
+  <a href="/login">Login</a>/<a href="/register">Sign Up</a>
+  {% else %}
+  <a href="/logout">Logout</a>
+  {% endif %}
+  </h4>
   <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/about">About</a></li>
     <li><a href="/browse">Search</a></li>
-    {% if current_user.is_anonymous %}
-    <li><a href="/login">Login</a></li>
-    <li><a href="/register">Sign Up</a></li>
-    {% else %}
-    <li><a href="/logout">Logout</a></li>
-    {% endif %}
   </ul>
-  <!-- {% with messages = get_flashed_messages() %}
+  {% with messages = get_flashed_messages() %}
         {% if messages %}
         <ul>
             {% for message in messages %}
@@ -19,7 +18,7 @@
             {% endfor %}
         </ul>
         {% endif %}
-        {% endwith %} !-->
+        {% endwith %}
   <div class="searchWrapper">
      <form method="POST" action={{ url_for('search') }}>
          {{ searchform.csrf_token }}
