moved the search bar onto the search page off the nav bar and styling

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -1,5 +1,13 @@
 {% extends 'layout.html' %}
 {% block content %}
+<h2><span>Search</span></h2>
+<div class="searchWrapper">
+   <form method="POST" action={{ url_for('search') }}>
+       {{ searchform.csrf_token }}
+       {{ searchform.query }}{{ searchform.submit }}
+   </form>
+   <p>Search via Surname for a Prisoner</p>
+ </div>
 <h2><span>View by Letter</span></h2>
 <div class="alphabet">
 <a href="/results/a">A</a>
@@ -29,6 +37,7 @@
 <a href="/results/y">Y</a>
 <a href="/results/z">Z</a>
 </div>
+<p>Browse by surname initial.</p>
 
 
 {% endblock %}
