--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,10 +83,14 @@ footer {
   padding-left: 15%;
 }
 
+.searchWrapper {
+  padding-bottom: 30px;
+}
+
 .alphabet {
   color: #D9B68C;
   padding-top: 30px;
-  font-size: 40px;
+  font-size: 20px;
 }
 
 .powphoto {
