--- a/static/css/style.css
+++ b/static/css/style.css
@@ -158,6 +158,7 @@ form {
 table {
   padding-top: 30px;
   padding-left: 20px;
+  width: 100%;
 }
 
 th, td{
@@ -165,6 +166,10 @@ th, td{
   font-size: 20px;
   padding: 5px;
   text-align: center;
+}
+
+td img {
+  width: 100%;
 }
 
 ul {
