--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <nav>
-  <h4>Welcome {{current_user.username}} | {% if current_user.is_anonymous %}
+  <h4>Welcome {% if current_user.is_authenticated %}<a href="/user/{{current_user.username}}">{{current_user.username}}</a>{% endif %} | {% if current_user.is_anonymous %}
   <a href="/login">Login</a>/<a href="/register">Sign Up</a>
   {% else %}
   <a href="/logout">Logout</a>
