--- a/templates/user.html
+++ b/templates/user.html
@@ -2,10 +2,19 @@
 {% block content %}
 
 <h2><span>Hi {{user.username}}</span></h2>
-<h3>Comments</h3>
-{% for c in comments %}
-<p><a href="/pow/{{c.powid}}">{{c.comment}} on {{c.Prisoner.Rank.initial}}. {{c.Prisoner.surname}}'s page</a></p>
-{% endfor %}
-
-<h3>Tracked Prisoners</h3>
+<div class="row">
+  <div class="halfsplit">
+    <h3>Comments</h3>
+    {% for c in comments %}
+    <p><a href="/pow/{{c.powid}}">{{c.comment}} on {{c.Prisoner.Rank.initial}}. {{c.Prisoner.surname}}'s page</a></p>
+    {% endfor %}
+    <h3>Tracked Prisoners</h3>
+  </div>
+  <div class="halfsplit">
+    <h3>Account Details</h3>
+    <p>Username: {{current_user.username}}</p>
+    <br>
+    <a href='/update_password'>Change Password</a>
+  </div>
+</div>
 {% endblock %}
