--- a/templates/prisoner.html
+++ b/templates/prisoner.html
@@ -23,7 +23,7 @@
   </div>
   <div class="powtext">
     <p>{{prisoner.Rank.name}} {{first_names}} {{prisoner.surname}} served in the
-      {% for u in prisoner.units %} {{u.unit.name}} {% endfor %} in the {{prisoner.branch}} of the Second New Zealand
+      {% for u in prisoner.units %} {{u.unit.fullname}} {% endfor %} in the {{prisoner.branch}} of the Second New Zealand
       Expeditionary Force (2NZEF). Unfortunately {{inor}} {{prisoner.Capture.date}} he was
       captured along with {{count}} other soldiers {{sent}}.<br></p>
   </div>
@@ -34,14 +34,15 @@
 <h3>Unit.</h3>
 {% for u in prisoner.units %}
 <p>{{u.unit.name}}</p>
+<p>{{u.unit.fullname}}</p>
 <p>{{u.unit.desc}}</p>
 {% endfor %}
 <h3>Capture.</h3>
 <p>{{prisoner.Capture.date}}</p>
 <p>{{prisoner.Capture.desc}}</p>
 
-<h3>Comments</h3>
 <div class="row">
+  <h2><span>Comments</span></h2>
   <div class="halfsplit">
     {% if current_user.is_anonymous %}
     <p>To comment on a Prisoner's profile you need to login in. <a href="/login">Click Here to Login!</a></p>
