email validation breaking

--- a/templates/updatepass.html
+++ b/templates/updatepass.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-<form class="" method="post">
+<form class="contact" method="post">
   {{passwordform.hidden_tag()}}
   <p>
     {{passwordform.currentpassword.label}}<br>
