--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,7 @@ footer {
   width: 100%;
   float: left;
   padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .contact {
@@ -61,6 +62,10 @@ footer {
 .row {
   width: 100%;
   display: inline;
+}
+
+.row h2 span {
+  padding-top: 15px;
 }
 
 .row p {
@@ -195,6 +200,16 @@ a {
 
 a:hover {
   color: #D9B68C;
+}
+
+.contact textarea {
+  width: 95%;
+}
+
+textarea {
+  width: 100%;
+  height: 150px;
+  resize: none;
 }
 
 p {
