added header text to page

--- a/templates/updatepass.html
+++ b/templates/updatepass.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
-
+<h2><span>Update Password</span></h2>
 <form class="contact" method="post">
   {{passwordform.hidden_tag()}}
   <p>
