--- a/templates/results.html
+++ b/templates/results.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-<h2><span>Showing results for {{val}}</span></h2>
+<h2><span>Showing results for {% if val is not none %}{{val}}{% else %}{{val2}}{% endif %}</span></h2>
 
 <div class="row">
   <div class="coloum">
