--- a/templates/login.html
+++ b/templates/login.html
@@ -21,5 +21,6 @@
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
+    <p><a href="/reset_password_request">Forgot your password? Click Here to reset it!</a></p>
     <p><a href="/register">Don't have an account? Click here to go register!</a></p>
 {% endblock %}
