--- a/templates/resetpassword.html
+++ b/templates/resetpassword.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h1>Reset Your Password</h1>
+    <h2><span>Reset Your Password</span></h2>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
