changed to make track when multiple users track one POW

--- a/templates/email/POW_Update.html
+++ b/templates/email/POW_Update.html
@@ -1,4 +1,4 @@
-<p>Dear {{ user.username }},</p>
+<p>Dear {{ user.User.username }},</p>
 <p>
   Another user has commented on {{POW.Rank.initial}}. {{POW.initial}}. {{POW.surname}}'s page.
 </p>
