added dropdown menu to search to make it more specific

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -4,7 +4,7 @@
 <div class="searchWrapper">
    <form method="POST" action={{ url_for('search') }}>
        {{ searchform.csrf_token }}
-       {{ searchform.query }}{{ searchform.submit }}
+       {{ searchform.query }}{{ searchform.options }}{{ searchform.submit }}
    </form>
    <p>Search via Surname for a Prisoner</p>
  </div>
