--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
   <head>
     <title>New Zealand Prisoner of War Records</title>
     <link rel="stylesheet" href="/static/css/style.css">
+    <!-- Importing font from Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway&display=swap" rel="stylesheet">
   </head>
 
