--- a/templates/email/reset_password.html
+++ b/templates/email/reset_password.html
@@ -1,4 +1,4 @@
-<p>Dear {{ user.User.username }},</p>
+<p>Dear {{ user.username }},</p>
 <p>
     To reset your password
     <a href="{{ url_for('reset_password', token=token, _external=True) }}">
